# KDU-2026-AI

./: .env  01_layout_handwriting_test.ipynb  02_detail_toggle_model_downgrade.ipynb  03_vision_token_math.ipynb  04_spatial_architecture_matrix.ipynb  DEVELOPER_GUIDE.md  Phase1_Domain_Vocabulary_Trap.ipynb  Phase2_Matryoshka_vs_Binary_Quantization.ipynb  Phase3_Dense_Retrieval_Limits_and_Cross_Encoder_Reranking.ipynb  Phase4_Architecture_Decision_Matrix.ipynb  README.md  agents.md  alembic.ini  docker-compose.yml  requirements-dev.txt  requirements.txt
Advanced-agent-patterns/: .codexignore  .gitignore
Fine-tuning/: README.md  context.md
GraphRAG/: .env.example  .gitignore  README.md
LLMOps/: .gitignore  README.md  implementation-plan.md
Multi-Modal/: .gitignore  app.py  config.py  design.md  implementation-plan.md  requirements.txt  utils.py
RAG/: .env.example  .gitignore  README.md  app.py  implementation-plan.md  requirements.txt
Stock-Trader/: .env.example  .gitignore
Transformers/: .gitignore  README.md  app.py  exercise1_transformers.py  exercise2_ollama_demo.py  implementation-plan.md  requirements.txt
agentkit/: .codexignore  .gitignore  implementation-plan.md  implementation-prompt.md
ai-hackathon-classes-ORGINIT-366-MCP/: .gitignore  LICENSE  README.md
alembic/: env.py
crewAI/: .env.example  .gitignore  README.md  pyproject.toml
crewAI/src/crewai_lab/: __init__.py  crew_builder.py  flow_app.py  main.py  state.py
crewAI/src/crewai_lab/config/: agents.yaml  tasks.yaml
crewAI/src/crewai_lab/tools/: __init__.py  flaky_research_tool.py
(+357 files in other folders)
