[project]
name = "crewai-lab"
version = "0.1.0"
description = "Phase 1 CrewAI lab for orchestration and failure handling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.130.0",
    "crewai-tools>=0.45.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
